# Truth-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEX_HARNESS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TRUTH-AI_SPEC.md  index.html  plan.md  pyproject.toml  vercel.json
api/: public-config.js  verified-chat-backend.py
app/: auth-client.js  route-loader.js  standards-library.js  verified-chat-client.js
features/: index.html
frontend/: TASidebar.dc.html  Truth-AI-App.dc.html  Truth-AI.dc.html  Truth-Kernel-Studio.dc.html  TruthKernel.dc.html  index.html  ios-frame.jsx  support.js  vercel.json
integrity/: index.html
problem/: index.html
schemas/: schema-hashes.json
sign-in/: index.html
supabase/: README.md
tests/: test_advisory_adapters.py  test_auth_client.py  test_canonical.py  test_cli.py  test_comparators.py  test_contract.py  test_evaluator_library.py  test_gate.py  test_graph.py  test_ledger.py  test_m4_golden.py  test_predicates.py  test_public_config_route.py  test_replay.py  test_report.py  test_route_loader_auth.py  test_scaffold.py  test_schemas.py  test_server.py  test_sign_in_config_fallback.py  test_sign_in_links.py  test_sign_in_restore_redirect.py  test_sign_in_session_normalization.py  test_sign_in_signup_redirect.py  test_standards_ingestion.py  test_standards_library.py  test_verified_chat_backend_function.py  test_verified_chat_boundary.py  test_verified_chat_client_routes.py  test_verified_chat_llm_adapter.py  test_verified_chat_proxy_route.py
tools/: export_schemas.py  (+6 more)
(+108 files in other folders)
